# quizgame

./: .gitignore  CMakeLists.txt  Makefile  Quiz_main.c  README.md  display_quiz.c  display_quiz.h  enter_question.c  func.c  func.h  groups  info  project.config  quiz_declare.h  quiz_main.c
quiz/: Makefile  cmake_install.cmake  play  question
